--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Codecov
       uses: codecov/codecov-action@v2.1.0
       with: 
-        file: ./HomeWork1/HW1TestReport.xml
+        file: ./HomeWork1/Coverage.xml
