--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,11 +19,13 @@ jobs:
         dotnet-version: 5.0.x
     - name: Restore dependencies
       run: dotnet restore
+      working-directory: HomeWork1/HomeWork1
     - name: Build
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      working-directory: HomeWork1/HomeWork1Test
     - name: Codecov
       uses: codecov/codecov-action@v2.1.0
       with: 
-        file: ./HomeWork1/HW1TestReport.xml
+        file: HomeWork1/TestResults/CovReport.xml
