--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,7 @@ jobs:
       working-directory: HomeWork1/HomeWork1
     - name: Build
       run: dotnet build --no-restore
+      working-directory: HomeWork1/HomeWork1
     - name: Test
       run: dotnet test --no-build --verbosity normal
       working-directory: HomeWork1/HomeWork1Test
