--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,4 +29,4 @@ jobs:
     - name: Codecov
       uses: codecov/codecov-action@v2.1.0
       with: 
-        file: HomeWork1/TestResults/CovReport.xml
+        file: "HomeWork1/TestResults/CovReport.xml"
