--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,10 +19,10 @@ jobs:
         dotnet-version: 5.0.x
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: HomeWork1/HomeWork1
+      working-directory: HomeWork1
     - name: Build
       run: dotnet build --no-restore
-      working-directory: HomeWork1/HomeWork1
+      working-directory: HomeWork1
     - name: Test
       run: dotnet test --no-build --verbosity normal
       working-directory: HomeWork1/HomeWork1Test
