--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Codecov
       uses: codecov/codecov-action@v2.1.0
       with: 
-        file: ./coverage.xml
+        file: /coverage.xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
@@ -37,5 +37,5 @@ jobs:
           file: ./coverage.xml
           flags: tests
           name: codecov-umbrella
-          yml: ./dotne.yml
+          yml: ./dotnet.yml
           fail_ci_if_error: true
