--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,24 +19,14 @@ jobs:
         dotnet-version: 5.0.x
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: ./HomeWork1
+      working-directory: HomeWork1/HomeWork1
     - name: Build
       run: dotnet build --no-restore
-      working-directory: ./HomeWork1
+      working-directory: HomeWork1/HomeWork1
     - name: Test
       run: dotnet test --no-build --verbosity normal
-      working-directory: ./HomeWork1
+      working-directory: HomeWork1/HomeWork1Test
     - name: Codecov
       uses: codecov/codecov-action@v2.1.0
-      with: 
-        file: coverage.xml
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
       with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
-          flags: tests
-          name: codecov-umbrella
-          yml: ./dotnet.yml
-          fail_ci_if_error: true
-
+        file: "HomeWork1/coverage.xml"
