--- a/HomeWork8/HomeWork8/HomeWork8/HomeWork8.csproj
+++ b/HomeWork8/HomeWork8/HomeWork8/HomeWork8.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
+
+    <ItemGroup>
+		<PackageReference Include="MiniProfiler" Version="4.2.22"/>
+		<PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.22"/>
+    </ItemGroup>
 
 </Project>
